--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.frank.han">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".App"
         android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        android:theme="@style/AppTheme"
+        tools:targetApi="33">
 
-                <category android:name="android.intent.category.LAUNCHER" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.article.ArticleActivity" />
+        <activity android:name=".ui.article.ArticleActivity"/>
+
+        <activity
+            android:name=".ui.article.ArticleDetailActivity"
+            android:label="@string/article_detail"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value=""/>
+        </activity>
 
         <provider
             android:name="androidx.startup.InitializationProvider"
@@ -31,24 +45,21 @@
             tools:node="merge">
             <meta-data
                 android:name="com.frank.han.components.StethoInitializer"
-                android:value="androidx.startup" />
+                android:value="androidx.startup"/>
             <meta-data
                 android:name="com.frank.han.components.KoinInitializer"
-                android:value="androidx.startup" />
+                android:value="androidx.startup"/>
         </provider>
 
         <meta-data
             android:name="android.max_aspect"
-            android:value="2.6" />
-
+            android:value="2.6"/>
         <meta-data
             android:name="android.notch_support"
-            android:value="true" />
-
+            android:value="true"/>
         <meta-data
             android:name="notch.config"
-            android:value="portrait|landscape" />
-
+            android:value="portrait|landscape"/>
     </application>
 
 </manifest>
