--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,26 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     apply from: 'dependencies.gradle'
-    repositories {
-        google()
-        jcenter()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-        maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local' }
-    }
-    dependencies {
-        classpath deps.android_gradle_plugin
-        classpath deps.kotlin_gradle_plugin
-        classpath deps.navigation_gradle_plugin
-        classpath deps.jacoco_gradle_plugin
+    ext {
+        compose_ui_version = '1.2.0-beta01'
     }
 }
-
 plugins {
-    id "com.diffplug.spotless" version "5.10.2"
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-    }
+    id 'com.android.application' version '7.4.0-alpha09' apply false
+    id 'com.android.library' version '7.4.0-alpha09' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'com.google.devtools.ksp' version '1.8.0-1.0.8' apply false
+    id 'androidx.navigation.safeargs' version '2.5.3' apply false
+    id 'androidx.navigation.safeargs.kotlin' version '2.5.3' apply false
+    id 'com.diffplug.spotless' version '6.14.0' apply true
+    id 'com.dicedmelon.gradle.jacoco-android' version '0.1.5' apply false
 }
 
 spotless {
     kotlin {
         target "**/*.kt"
-        ktlint("0.40.0").userData([
-                'max_line_length': '100',
-                'disabled_rules' : 'no-wildcard-imports'
+        ktlint("0.48.2").userData([
+            'max_line_length': '100',
+            'disabled_rules' : 'no-wildcard-imports'
         ])
     }
 }
