--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,17 +1,10 @@
 ext.deps = [:]
 
-def build_versions = [:]
-build_versions.min_sdk = 21
-build_versions.target_sdk = 30
-ext.build_versions = build_versions
-
 def versions = [:]
-versions.android_gradle_plugin = '4.1.2'
-versions.kotlin = "1.4.10"
 versions.findbugs = "3.0.2"
-versions.androidx_core = "1.5.0-beta01"
+versions.androidx_core = "1.10.0-alpha02"
 versions.androidx_arch_core = "2.1.0"
-versions.androidx_appcompat = "1.2.0"
+versions.androidx_appcompat = "1.6.0"
 versions.androidx_recyclerview = "1.1.0"
 versions.androidx_startup = "1.0.0"
 versions.androidx_datastore = "1.0.0-alpha04"
@@ -20,38 +13,38 @@ versions.androidx_navigation = "2.3.2"
 versions.androidx_constraintlayout = "2.0.4"
 versions.androidx_fragment = "1.2.5"
 versions.androidx_collection = "1.1.0"
-versions.androidx_test_core = "1.3.0"
-versions.androidx_test_runner_rules = "1.3.0"
-versions.androidx_test_junit = "1.1.2"
-versions.androidx_test_truth = "1.3.0"
-versions.androidx_test_espresso = "3.3.0"
+versions.androidx_room = "2.5.0"
+versions.androidx_compose_boom = "2022.12.00"
+versions.window = "1.0.0"
+versions.androidx_test_core = "1.5.0"
+versions.androidx_test_runner = "1.5.2"
+versions.androidx_test_rules = "1.5.0"
+versions.androidx_test_junit = "1.1.5"
+versions.androidx_test_truth = "1.5.0"
+versions.androidx_test_espresso = "3.5.1"
 versions.androidx_test_uiautomator = "2.2.0"
 versions.google_truth = "1.1"
-versions.kotlinx_coroutines_test = "1.4.2"
+versions.kotlinx_coroutines_test = "1.6.4"
 versions.junit = "4.12"
 versions.mockito = "1.10.19"
 versions.robolectric = "4.5.1"
-versions.espresso = "3.1.0"
-versions.jacoco_gradle_plugin = "0.1.5-SNAPSHOT"
+versions.espresso = "3.5.1"
 versions.retrofit = "2.9.0"
 versions.okhttp = "4.8.0"
 versions.stetho = "1.5.1"
-versions.room = "2.2.2"
-versions.koin = "2.2.1"
+versions.koin = "3.3.2"
+versions.koin_android = "3.3.2"
+versions.koin_android_compose = "3.4.1"
 versions.glide = "4.11.0"
 ext.versions = versions
 
 def deps = [:]
 
-deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
-deps.kotlin_gradle_plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
-deps.navigation_gradle_plugin = "androidx.navigation:navigation-safe-args-gradle-plugin:$versions.androidx_navigation"
-deps.jacoco_gradle_plugin = "com.dicedmelon.gradle:jacoco-android:$versions.jacoco_gradle_plugin"
-
-deps.kotlin = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
+deps.compose_bom = "androidx.compose:compose-bom:$versions.androidx_compose_boom"
 
 def androidx = [:]
 androidx.appcompat = "androidx.appcompat:appcompat:$versions.androidx_appcompat"
+androidx.appcompat_resources = "androidx.appcompat:appcompat-resources:$versions.androidx_appcompat"
 androidx.recyclerview = "androidx.recyclerview:recyclerview:$versions.androidx_recyclerview"
 androidx.constraintlayout = "androidx.constraintlayout:constraintlayout:$versions.androidx_constraintlayout"
 androidx.startup = "androidx.startup:startup-runtime:$versions.androidx_startup"
@@ -66,6 +59,18 @@ androidx.ktx_lifecycle_livedata = "androidx.lifecycle:lifecycle-livedata-ktx:$ve
 androidx.lifecycle_compiler = "androidx.lifecycle:lifecycle-compiler:$versions.androidx_lifecycle"
 androidx.ktx_navigation_fragment = "androidx.navigation:navigation-fragment-ktx:$versions.androidx_navigation"
 androidx.ktx_navigation_ui = "androidx.navigation:navigation-ui-ktx:$versions.androidx_navigation"
+androidx.room_core = "androidx.room:room-runtime:$versions.androidx_room"
+androidx.room_compiler = "androidx.room:room-compiler:$versions.androidx_room"
+androidx.room_ktx = "androidx.room:room-ktx:$versions.androidx_room"
+androidx.compose_material3 = "androidx.compose.material3:material3"
+androidx.compose_ui_tooling_preview = "androidx.compose.ui:ui-tooling-preview"
+androidx.compose_material_icons_core = "androidx.compose.material:material-icons-core"
+androidx.compose_material_icons_extended = "androidx.compose.material:material-icons-extended"
+androidx.compose_material_window = "androidx.compose.material3:material3-window-size-class"
+androidx.compose_activity = "androidx.activity:activity-compose:1.6.1"
+androidx.compose_viewmodel = "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+androidx.compose_livedata = "androidx.compose.runtime:runtime-livedata"
+androidx.window = "androidx.window:window:$versions.window"
 deps.androidx = androidx
 
 deps.junit = "junit:junit:$versions.junit"
@@ -80,8 +85,8 @@ androidx_test.core_ktx = "androidx.test:core-ktx:$versions.androidx_test_core"
 androidx_test.arch_core = "androidx.arch.core:core-testing:$versions.androidx_arch_core"
 androidx_test.fragment = "androidx.fragment:fragment-testing:$versions.androidx_fragment"
 androidx_test.navigation = "androidx.navigation:navigation-testing:$versions.androidx_navigation"
-androidx_test.runner = "androidx.test:runner:$versions.androidx_test_runner_rules"
-androidx_test.rules = "androidx.test:rules:$versions.androidx_test_runner_rules"
+androidx_test.runner = "androidx.test:runner:$versions.androidx_test_runner"
+androidx_test.rules = "androidx.test:rules:$versions.androidx_test_rules"
 androidx_test.junit = "androidx.test.ext:junit:$versions.androidx_test_junit"
 androidx_test.junit_ktx = "androidx.test.ext:junit-ktx:$versions.androidx_test_junit"
 androidx_test.truth = "androidx.test.ext:truth:$versions.androidx_test_truth"
@@ -89,6 +94,10 @@ androidx_test.espresso_core = "androidx.test.espresso:espresso-core:$versions.an
 androidx_test.espresso_contrib = "androidx.test.espresso:espresso-contrib:$versions.androidx_test_espresso"
 androidx_test.espresso_intents = "androidx.test.espresso:espresso-intents:$versions.androidx_test_espresso"
 androidx_test.uiautomator = "androidx.test.uiautomator:uiautomator:$versions.androidx_test_uiautomator"
+androidx_test.room = "androidx.room:room-testing:$versions.androidx_room"
+androidx_test.compose_junit4 = "androidx.compose.ui:ui-test-junit4"
+androidx_test.compose_ui_tooling = "androidx.compose.ui:ui-tooling"
+androidx_test.compose_ui_test_manifest = "androidx.compose.ui:ui-test-manifest"
 deps.androidx_test = androidx_test
 
 def retrofit = [:]
@@ -101,22 +110,13 @@ def okhttp = [:]
 okhttp.logging_interceptor = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp"
 deps.okhttp = okhttp
 
-def room = [:]
-room.core = "androidx.room:room-runtime:$versions.room"
-room.compiler = "androidx.room:room-compiler:$versions.room"
-room.ktx = "androidx.room:room-ktx:$versions.room"
-room.testing = "androidx.room:room-testing:$versions.room"
-deps.room = room
-
 def koin = [:]
-koin.core = "org.koin:koin-core:$versions.koin"
-koin.ext = "org.koin:koin-core-ext:$versions.koin"
-koin.test = "org.koin:koin-test:$versions.koin"
-koin.android = "org.koin:koin-android:$versions.koin"
-koin.androidx_scope = "org.koin:koin-androidx-scope:$versions.koin"
-koin.androidx_viewmodel = "org.koin:koin-androidx-viewmodel:$versions.koin"
-koin.androidx_fragment = "org.koin:koin-androidx-fragment:$versions.koin"
-koin.androidx_ext = "org.koin:koin-androidx-ext:$versions.koin"
+koin.core = "io.insert-koin:koin-core:$versions.koin"
+koin.android = "io.insert-koin:koin-android:$versions.koin_android"
+koin.workmanager = "io.insert-koin:koin-androidx-workmanager:$versions.koin_android"
+koin.navigation = "io.insert-koin:koin-androidx-navigation:$versions.koin_android"
+koin.compose = "io.insert-koin:koin-androidx-compose:$versions.koin_android_compose"
+koin.test = "io.insert-koin:koin-test:$versions.koin"
 deps.koin = koin
 
 def stetho = [:]
